[package]
name = "rsomics-vcf-expr"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "bcftools-style VCF filter-expression parser and per-sample evaluator"

[dependencies]

[dev-dependencies]
